chore(updatecli) fix manifest for docker puppet module
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/puppet-modules/docker.yaml
+++ b/updatecli/weekly.d/puppet-modules/docker.yaml
@@ -40,9 +40,9 @@ targets:
     spec:
       file: Puppetfile
       matchpattern: >
-        mod 'puppetlabs-docker'(.*)
+        mod 'puppetlabs/docker'(.*)
       replacepattern: >
-        mod 'puppetlabs-docker', '{{ source "latestVersion" }}'
+        mod 'puppetlabs/docker', '{{ source "latestVersion" }}'
     scmid: default
 
 pullrequests:
