--- a/updatecli/weekly.d/puppet-modules/apt.yaml
+++ b/updatecli/weekly.d/puppet-modules/apt.yaml
@@ -16,7 +16,7 @@ scms:
 sources:
   latestVersion:
     kind: githubrelease
-    name: Get the latest puppetlabe/apt module version
+    name: Get the latest puppetlab/apt module version
     spec:
       owner: puppetlabs
       repository: puppetlabs-apt
