--- a/updatecli/weekly.d/puppet-modules/datadog.yaml
+++ b/updatecli/weekly.d/puppet-modules/datadog.yaml
@@ -1,5 +1,5 @@
 ---
-title: Bump the Docker Puppet Module
+title: Bump the Datadog Puppet Module
 
 scms:
   default:
@@ -16,10 +16,10 @@ scms:
 sources:
   latestVersion:
     kind: githubrelease
-    name: Get the latest puppetlab/docker module version
+    name: Get the latest datadog/datadog_agent module version
     spec:
-      owner: puppetlabs
-      repository: puppetlabs-docker
+      owner: DataDog
+      repository: puppet-datadog-agent
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       versionfilter:
@@ -30,19 +30,19 @@ conditions:
     kind: shell
     disablesourceinput: true
     spec:
-      command: curl --verbose --silent --show-error --location --fail --head --output /dev/null https://forge.puppet.com/v3/files/puppetlabs-docker-{{ source "latestVersion" }}.tar.gz
+      command: curl --verbose --silent --show-error --location --fail --head --output /dev/null https://forge.puppet.com/v3/files/datadog-datadog_agent-{{ source "latestVersion" }}.tar.gz
 
 targets:
   puppetfile:
-    name: "Update Puppetfile with the latest docker module version"
+    name: "Update Puppetfile with the latest datadog module version"
     kind: file
     sourceid: latestVersion
     spec:
       file: Puppetfile
       matchpattern: >
-        mod 'puppetlabs/docker'(.*)
+        mod 'datadog/datadog_agent'(.*)
       replacepattern: >
-        mod 'puppetlabs/docker', '{{ source "latestVersion" }}'
+        mod 'datadog/datadog_agent', '{{ source "latestVersion" }}'
     scmid: default
 
 pullrequests:
