--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -255,7 +255,7 @@ profile::buildmaster::cloud_agents:
           architecture: "arm64"
           labels:
             - arm64docker
-            - linux
+            - arm64linux
           useAsMuchAsPosible: false
   azure-vm-agents:
     azureCredentialsId: "azure-credentials"
