--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -91,6 +91,7 @@ profile::buildmaster::cloud_agents:
             - docker
             - linux
           useAsMuchAsPosible: true
+          spot: true
         - description: "Windows 2019"
           maxInstances: 10
           instanceType: T3Xlarge # 4 vCPUs / 16 Gb
@@ -99,6 +100,7 @@ profile::buildmaster::cloud_agents:
           labels:
             - docker-windows
           useAsMuchAsPosible: true
+          spot: true
           idleTerminationMinutes: 30
         - description: "High memory ubuntu 20.04"
           maxInstances: 20
@@ -110,6 +112,7 @@ profile::buildmaster::cloud_agents:
             - highram
             - docker-highmem
           useAsMuchAsPosible: false
+          spot: false
         - description: "ARM64 ubuntu 20.04"
           maxInstances: 2
           instanceType: A1Xlarge # 4 vCPUs / 8 Gb
@@ -119,6 +122,7 @@ profile::buildmaster::cloud_agents:
             - arm64docker
             - linux
           useAsMuchAsPosible: false
+          spot: true
   azure-vm-agents:
     resource_group: eastus-cijenkinsio
     agent_definitions:
