fix(ci.jenkins.io) make arm64 VM EC2 agents exclusives (#2261)
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

Co-authored-by: Tim Jacomb <21194782+timja@users.noreply.github.com>

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -269,7 +269,7 @@ profile::buildmaster::cloud_agents:
           architecture: "arm64"
           labels:
             - arm64docker
-            - linux
+            - arm64linux
           useAsMuchAsPosible: false
           spot: true
   azure-vm-agents:
