--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -240,7 +240,7 @@ profile::buildmaster::cloud_agents:
           useAsMuchAsPosible: true
           spot: true
           idleTerminationMinutes: 30 # Windows is billed per hour: let's wait half of this period since most of the builds are less than 30 min on Windows
-        - description: "High memory ubuntu 20.04 (spot)"
+        - description: "High memory ubuntu 20.04 (ondemand)"
           maxInstances: 50
           instanceType: M54xlarge # 16 vCPUS / 64 Gb
           os: "ubuntu"
@@ -249,17 +249,6 @@ profile::buildmaster::cloud_agents:
             - highmem
             - highram
             - docker-highmem
-          useAsMuchAsPosible: false
-          spot: true
-        - description: "High memory ubuntu 20.04 (ondemand)"
-          maxInstances: 50
-          instanceType: M54xlarge # 16 vCPUS / 64 Gb
-          os: "ubuntu"
-          architecture: "amd64"
-          labels:
-            - highmem-ondemand
-            - highram-ondemand
-            - docker-highmem-ondemand
           useAsMuchAsPosible: false
           spot: false
         - description: "ARM64 ubuntu 20.04"
@@ -315,7 +304,7 @@ profile::buildmaster::cloud_agents:
         virtualNetworkName: "prod-jenkins-public-prod"
         virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
         subnetName: "ci.j-agents-vm"
-        spot: true
+        spot: false
       - name: "win-2019" # The name must not contains "windows" or Azure API complains :facepalm:
         description: "Windows 2019"
         imageDefinition: jenkins-agent-windows-2019
