--- a/updatecli/weekly.d/puppet-modules/apt.yaml
+++ b/updatecli/weekly.d/puppet-modules/apt.yaml
@@ -16,7 +16,7 @@ scms:
 sources:
   latestVersion:
     kind: githubrelease
-    name: Get the latest puppetlab/apt module version
+    name: Get the latest puppetlabs-apt module version
     spec:
       owner: puppetlabs
       repository: puppetlabs-apt
@@ -40,9 +40,9 @@ targets:
     spec:
       file: Puppetfile
       matchpattern: >
-        mod 'puppetlabs/apt'(.*)
+        mod 'puppetlabs-apt'(.*)
       replacepattern: >
-        mod 'puppetlabs/apt', '{{ source "latestVersion" }}'
+        mod 'puppetlabs-apt', '{{ source "latestVersion" }}'
     scmid: default
 
 pullrequests:
