--- a/updatecli/weekly.d/puppet-modules/datadog.yaml
+++ b/updatecli/weekly.d/puppet-modules/datadog.yaml
@@ -16,7 +16,7 @@ scms:
 sources:
   latestVersion:
     kind: githubrelease
-    name: Get the latest datadog/datadog_agent module version
+    name: Get the latest datadog-datadog_agent module version
     spec:
       owner: DataDog
       repository: puppet-datadog-agent
@@ -40,9 +40,9 @@ targets:
     spec:
       file: Puppetfile
       matchpattern: >
-        mod 'datadog/datadog_agent'(.*)
+        mod 'datadog-datadog_agent'(.*)
       replacepattern: >
-        mod 'datadog/datadog_agent', '{{ source "latestVersion" }}'
+        mod 'datadog-datadog_agent', '{{ source "latestVersion" }}'
     scmid: default
 
 pullrequests:
