chore(vagrant) update gem and vagrant script to share the same bundle and modules cache
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,8 @@
 .ruby-*
 spec/fixtures/
 .bundle
-vagrant2014*
-d2014*
+modules
 modules/
-.kube/
-# hieradata/roles/kubernetes.yaml is used for local testing
-hieradata/roles/kubernetes.yaml
 log/
 tmp/
 vendor/
