--- a/hieradata/clients/oracle.updates.jenkins.io.yaml
+++ b/hieradata/clients/oracle.updates.jenkins.io.yaml
@@ -13,7 +13,7 @@ lvm::volume_groups:
     logical_volumes:
       updates_var:
         size: 470G
-        mountpath: /var/
+        mountpath: /var
       updates_srv:
         size: 700G
         mountpath: /srv
