--- a/hieradata/clients/oracle.updates.jenkins.io.yaml
+++ b/hieradata/clients/oracle.updates.jenkins.io.yaml
@@ -1,11 +1,7 @@
 ---
-# https://www.liquidweb.com/kb/apache-performance-tuning-swap-memory/
-# trashing point, with ~30 Gb of RAM and ~500Mb (worst-case full apache) means around 50.
-# We are conservative and keep 30 (to be monitored and validated)
-apache::mod::event::serverlimit: '30' #default 25
 # https://httpd.apache.org/docs/2.4/fr/mod/mpm_common.html#maxrequestworkers
-# maxrequestworkers = ServerLimit (see value above) * ThreadsPerChild (default: 25)
-apache::mod::event::maxrequestworkers: '750'
+# maxrequestworkers = ServerLimit (default: 25) * ThreadsPerChild (default: 25)
+apache::mod::event::maxrequestworkers: '625'
 lvm::volume_groups:
   data:
     physical_volumes:
