fix LVM issues - change mountpoint to /var/log/apache2 for the updates_log lv
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/oracle.updates.jenkins.io.yaml
+++ b/hieradata/clients/oracle.updates.jenkins.io.yaml
@@ -9,7 +9,7 @@ lvm::volume_groups:
     logical_volumes:
       updates_var:
         size: 470G
-        mountpath: /var
+        mountpath: /var/log/apache2
       updates_srv:
         size: 700G
         mountpath: /srv
