chore(updatecli) fix the manifest of the puppet module cron with the correct GitHub repository
Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/updatecli/weekly.d/puppet-modules/cron.yaml
+++ b/updatecli/weekly.d/puppet-modules/cron.yaml
@@ -18,8 +18,8 @@ sources:
     kind: githubrelease
     name: Get the latest puppetlabs-cron module version
     spec:
-      owner: voxpupuli
-      repository: puppet-cron
+      owner: puppetlabs
+      repository: puppetlabs-cron_core
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       versionfilter:
