--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -177,15 +177,19 @@ profile::jenkinscontroller::plugins:
   - beer
 profile::jenkinscontroller::agents_setup:
   windows:
-    agentDir: 'C:\\Jenkins'
-    tempDir: 'C:\\\\temp'
+    agentDir: 'C:/Jenkins'
+    tempDir: 'C:/temp'
     remoteAdmin: Administrator
-    osDiskSize: "128"
+    osDiskSize: 128
+    agentJavaBin: 'C:/tools/jdk-11/bin/java'
+    agentJavaOpts: '-XX:+PrintCommandLineFlags'
   ubuntu:
     agentDir: "/home/jenkins"
     remoteAdmin: jenkins
     tempDir: "/tmp"
     osDiskSize: 90
+    agentJavaBin: '/opt/jdk-11/bin/java'
+    agentJavaOpts: '-XX:+PrintCommandLineFlags'
 profile::jenkinscontroller::agent_images:
   ec2_amis:
     ubuntu-amd64: "ami-0efe0668ca5417fa3"
