fix(ci.jenkins.io) set maven-11* container templates to use the default java installation.
Related to https://github.com/jenkins-infra/helpdesk/issues/3096

Signed-off-by: Damien Duportal <damien.duportal@gmail.com>

--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -103,6 +103,7 @@ profile::jenkinscontroller::cloud_agents:
             - jdk11
           cpus: 4
           memory: 8
+          agentJavaBin: java # From image maven:3.8.6-eclipse-temurin-11
           imagePullSecrets: dockerhub-credential
         - name: jnlp-maven-17
           labels:
@@ -188,6 +189,7 @@ profile::jenkinscontroller::cloud_agents:
             - jdk11
           cpus: 4
           memory: 8
+          agentJavaBin: java # From image maven:3.8.6-eclipse-temurin-11
           imagePullSecrets: dockerhub-credential
         - name: jnlp-maven-17
           labels:
@@ -343,6 +345,7 @@ profile::jenkinscontroller::cloud_agents:
           command: 'pwsh.exe C:/ProgramData/Jenkins/jenkins-agent.ps1 -Url ^${rootUrl} -Secret ^${secret} -Name ^${nodeName}'
           cpus: 4
           memory: 8
+          agentJavaBin: java # From image maven:3.8.6-eclipse-temurin-11
           labels:
             - maven-11-windows
 # These are plugins we need in our ci environment
