--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -273,7 +273,7 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
-            javahome: /opt/jdk-8
+            javaHome: /opt/jdk-8
           - name: jnlp-maven-11
             labels:
               - maven-11
