--- a/hieradata/clients/azure.ci.jenkins.io.yaml
+++ b/hieradata/clients/azure.ci.jenkins.io.yaml
@@ -194,6 +194,30 @@ profile::jenkinscontroller::jcasc:
             cpus: 4
             memory: 8
             imagePullSecrets: dockerhub-credential
+          - name: jnlp-maven-8-all-in-one
+            imageName: jnlp-maven-all-in-one
+            labels:
+              - maven-8-all-in-one
+            cpus: 4
+            memory: 8
+            imagePullSecrets: dockerhub-credential
+            javaHome: /opt/jdk-8
+          - name: jnlp-maven-11-all-in-one
+            imageName: jnlp-maven-all-in-one
+            labels:
+              - maven-11-all-in-one
+            cpus: 4
+            memory: 8
+            imagePullSecrets: dockerhub-credential
+            javaHome: /opt/jdk-11
+          - name: jnlp-maven-17-all-in-one
+            imageName: jnlp-maven-all-in-one
+            labels:
+              - maven-17-all-in-one
+            cpus: 4
+            memory: 8
+            imagePullSecrets: dockerhub-credential
+            javaHome: /opt/jdk-17
           - name: jnlp-node
             cpus: 2
             memory: 4
