--- a/updatecli/weekly.d/jenkinscontroller-agents.yaml
+++ b/updatecli/weekly.d/jenkinscontroller-agents.yaml
@@ -20,6 +20,12 @@ sources:
       repository: "packer-images"
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
+  getLatestInboundAllInOneContainerImage:
+    kind: dockerdigest
+    spec:
+      image: "jenkinsciinfra/jenkins-agent-ubuntu-20.04"
+      tag: "latest"
+      architecture: amd64
   getLatestInboundRubyContainerImage:
     kind: dockerdigest
     spec:
@@ -134,6 +140,16 @@ targets:
       file: hieradata/common.yaml
       key: "profile::jenkinscontroller::jcasc.agent_images.azure_vms_gallery_image.version"
     scmid: default
+  setInboundAllInOneContainerImage:
+    sourceid: getLatestInboundAllInOneContainerImage
+    name: "Bump ci.jenkins.io container agent image jenkinsciinfra/jenkins-agent-ubuntu-20.04 (AllInOne)"
+    kind: yaml
+    spec:
+      file: hieradata/common.yaml
+      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-all-in-one"
+    transformers:
+      - addprefix: "jenkinsciinfra/jenkins-agent-ubuntu-20.04@sha256:"
+    scmid: default
   setInboundRubyContainerImage:
     sourceid: getLatestInboundRubyContainerImage
     name: "Bump ci.jenkins.io container agent image jenkinsciinfra/inbound-agent-ruby"
@@ -143,36 +159,6 @@ targets:
       key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-ruby"
     transformers:
       - addprefix: "jenkinsciinfra/inbound-agent-ruby@sha256:"
-    scmid: default
-  setInboundMaven8ContainerImage:
-    sourceid: getLatestInboundMaven8ContainerImage
-    name: "Bump ci.jenkins.io container agent image jenkinsciinfra/inbound-agent-maven (JDK8)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-8"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven@sha256:"
-    scmid: default
-  setInboundMaven11ContainerImage:
-    sourceid: getLatestInboundMaven11ContainerImage
-    name: "Bump ci.jenkins.io container agent image jenkinsciinfra/inbound-agent-maven (JDK11)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-11"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven@sha256:"
-    scmid: default
-  setInboundMaven17ContainerImage:
-    sourceid: getLatestInboundMaven17ContainerImage
-    name: "Bump ci.jenkins.io container agent image jenkinsciinfra/inbound-agent-maven (JDK17)"
-    kind: yaml
-    spec:
-      file: hieradata/common.yaml
-      key: "profile::jenkinscontroller::jcasc.agent_images.container_images.jnlp-maven-17"
-    transformers:
-      - addprefix: "jenkinsciinfra/inbound-agent-maven@sha256:"
     scmid: default
   setInboundNodeContainerImage:
     sourceid: getLatestInboundNodeContainerImage
@@ -236,9 +222,7 @@ pullrequests:
     targets:
       - setAzureGalleryImageVersion
       - setInboundRubyContainerImage
-      - setInboundMaven8ContainerImage
-      - setInboundMaven11ContainerImage
-      - setInboundMaven17ContainerImage
+      - setInboundAllInOneContainerImage
       - setInboundNodeContainerImage
       - setInboundAlpineContainerImage
       - setInboundJDK11ContainerImage
