--- a/hieradata/vagrant/common.yaml
+++ b/hieradata/vagrant/common.yaml
@@ -334,6 +334,28 @@ profile::jenkinscontroller::jcasc:
           virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
           subnetName: "ci.j-agents-vm"
           spot: true
+        - name: "win-2019-datadog-test" # The name must not contains "windows" or Azure API complains :facepalm:
+          description: "Windows 2019 test datadog"
+          imageDefinition: jenkins-agent-windows-2019
+          os: "windows"
+          storageAccount: SuperSecretThatShouldBeEncryptedInProduction
+          location: "East US 2"
+          instanceType: Standard_D4s_v3 # 4 vCPUS / 16 Gb
+          architecture: amd64
+          labels:
+            - docker-windows-test-datadog
+          idleTerminationMinutes: 30 # Quick deallocation as Linux is billed per minute
+          maxInstances: 20
+          useAsMuchAsPosible: false
+          credentialsId: "jenkinsvmagents-userpass"
+          useEphemeralOSDisk: false
+          usePrivateIP: true
+          virtualNetworkName: "prod-jenkins-public-prod"
+          virtualNetworkResourceGroupName: "prod-jenkins-public-prod"
+          subnetName: "ci.j-agents-vm"
+          spot: false
+          initScript: &BootstrapDatadogScriptWindowsVagrant
+            - (Get-Content C:\ProgramData\Datadog\datadog.yaml -Raw) -Replace 'api_key:', 'api_key: keytokeepsecret' | Set-Content C:\ProgramData\Datadog\datadog.yaml
     azure-container-agents:
       aci-windows:
         credentialsId: "azure-credentials"
