--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -194,7 +194,7 @@ profile::jenkinscontroller::jcasc:
   agents_setup:
     windows:
       agentDir: 'C:/Jenkins'
-      tempDir: 'C:/temp'
+      tempDir: 'C:\\Temp'
       remoteAdmin: Administrator
       osDiskSize: 128
       agentJavaBin: 'C:/tools/jdk-11/bin/java'
